--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "serve-favicon": "^2.4.1",
     "serve-static": "^1.12.1",
     "supervisor": "^0.12.0",
+    "sweetalert": "^1.1.3",
     "underscore": "^1.8.3"
   }
 }
