--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/orientx/nd_st.git"
-  },       
+  },
   "bugs": {
     "url": "https://github.com/orientx/nd_st/issues"
   },
@@ -39,8 +39,10 @@
     "log4js": "^1.1.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.9.1",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
