# LHI package.json 모니터링 supervisor에서 nodemon으로 변경

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Gruntfile.js",
   "devDependencies": {},
   "scripts": {
-    "start": "supervisor ./bin/www",
+    "start": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "LHI",
