--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
+    "nodemailer": "^4.0.1",
+    "nodemailer-smtp-pool": "^2.8.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
