--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "date-utils": "^1.2.21",
     "emailjs": "^1.0.8",
     "express": "^4.15.2",
     "express-cluster": "0.0.4",
