--- a/config/config.json
+++ b/config/config.json
@@ -33,5 +33,8 @@
     },
     "fileUpload":{
         "directory":"upload-file"
+    },
+    "summernoteUpload":{
+        "directory":"upload-file-summernote"
     }
 }
