--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "passport-tumblr": "^0.1.2",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
+    "request": "^2.83.0",
     "serve-favicon": "^2.4.1",
     "serve-static": "^1.12.1",
     "supervisor": "^0.12.0",
