#LHI autocomplete 운영 연결 등

--- a/config/config.json
+++ b/config/config.json
@@ -38,6 +38,6 @@
         "directory":"upload-file-summernote"
     },
     "groupware":{
-        "uri":"http://gw.isudev.com"
+        "uri":"http://gw.isu.co.kr"
     }
 }
