#LHI SD 등록 시 담당자에게 메신저 알림      model moment 추가      사용자관리 사번추가(이수시스템만 적용)

--- a/config/config.json
+++ b/config/config.json
@@ -39,5 +39,8 @@
     },
     "groupware":{
         "uri":"http://gw.isu.co.kr"
+    },
+    "msgAlimi":{
+        "uri":"http://175.119.100.144:8089"
     }
 }
